--- a/main.css
+++ b/main.css
@@ -44,6 +44,7 @@ header .nav-society-link {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-left: 10px;
 }
 
 .nav-society-link img {
@@ -145,12 +146,18 @@ header .nav-society-link {
     font-weight: bold;
 }
 
+.team_member__position {
+    font-size: 28px;
+    text-align: center;
+    color: #828282;
+}
+
 .projects-wrapper {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 1fr;
     grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    grid-row-gap: 20px;
     margin-top: 30px;
     grid-auto-rows: 1fr;
 }
@@ -183,3 +190,21 @@ header .nav-society-link {
     max-height: 280px;
     object-fit: cover;
 }
+
+
+
+@media only screen and (max-width: 460px) {
+    .experience {
+        flex-direction: column;
+    }
+}
+
+/* @media only screen and (min-width: 600px) {
+    .projects-wrapper {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    .projects-wrapper { grid-template-columns: repeat(3, 1fr); }
+  } */
